# HRChacha

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/actions/clean-docker/: action.yml
.github/actions/deploy-ec2/: action.yml
.github/workflows/: main.yaml
hrchacha/components/: chatbot.py  data_handler.py  llm_handler.py
hrchacha/constants/: __init__.py
hrchacha/exceptions/: exception.py
hrchacha/logging/: logger.py
hrchacha/prompts/: __init__.py
hrchacha/ui/: __init__.py  chat_interface.py  chat_ui.py  home_screen.py  main_window.py  theme.py
hrchacha/utils/: general_utils.py
