[project]
name = "hrchacha"
version = "0.1.0"
description = "AI-powered hiring assistant chatbot built with Streamlit and Groq"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dnspython>=2.8.0,<3",
    "groq>=1.1.2,<2",
    "pydantic[email]>=2.13.0,<3",
    "pymongo>=4.16.0,<5",
    "python-dotenv>=1.2.2,<2",
    "streamlit>=1.56.0,<2",
]
